XMLExper/m12/m12_509_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLDocument::MarkInUse(const tinyxml2::XMLNode*)’:
tinyxml2.cpp:2230:54: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode* const’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
 2230 |   if (/*PCI*/dynamic_cast<tinyxml2::XMLComment*>(node) == _unlinked[i]) {
      |                                                      ^
diff: tinyxml2.S: No such file or directory
